[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2024"

[dependencies]
anyhow = "1.0.59"                                   # error handling
assert_matches = "1.5.0"
bytes = "1.3"                                       # helps manage buffers
futures-util = { version = "0.3.32", features = ["sink"] }
itertools = "0.15.0"
nom = "8"
thiserror = "1.0"                                   # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-util = { version = "0.7.18", features = ["codec"] }
